--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="destination" id="paris">
                 <h2>Paris</h2>
-                <h2>Roma</h2>
+                <h2>Italy</h2>
                 <h2>Roma</h2>
                 <h2>Roma</h2>
             </div>
