--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
                 <h2>Spain</h2>
-                <h2>Roma</h2>
+                <h2>Dahb visit</h2>
                 <h2>Roma</h2>
             </div>
         </div>
